--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="assets/font-awesome/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/odometer-theme-default.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -110,37 +109,38 @@
         <!--************ CONTENT ************************************************************************************-->
         <!--*********************************************************************************************************-->
         <main id="ts-content">
+            <div>
             <section class="ts-block pb-5" id="portfolio">
                     <div class="container">
-                        <div class="ts-title text-center">
+                        <div class="ts-title">
                             <h1>Portfólio</h1>
                         </div>
                         <!--end ts-title-->
-                        <div class="card-columns ts-gallery ts-column-count-4">
-                                <a href="assets/img/img-work-01.png" class="card ts-gallery__item popup-image" data-animate="ts-fadeInUp">
+                        <div class="card-columns ts-gallery ts-column-count-5">
+                                <a href="galeria-1.html" class="card ts-gallery__item">
                                     <div class="ts-gallery__item-description">
                                         <h6 class="ts-opacity__50">Branding</h6>
                                         <h4>Pehaz</h4>
                                     </div>
-                                    <img src="assets/img/img-work-01.png" class="card-img" alt="">
+                                    <img src="assets/img/red/img1.jpg" class="card-img" alt="">
                                     <!--end ts-gallery__image-->
                                 </a>
                                 <!--end card ts-gallery__item-->
-                                <a href="assets/img/img-work-01.png" class="card ts-gallery__item popup-image" data-animate="ts-fadeInUp">
+                                <a href="assets/img/red/img2.jpg" class="card ts-gallery__item popup-image">
                                     <div class="ts-gallery__image">
                                         <div class="ts-gallery__item-description">
                                             <h6 class="ts-opacity__50">Webdesign</h6>
                                             <h4>Carilo</h4>
                                         </div>
-                                        <img src="assets/img/img-work-01.png" class="card-img" alt="">
+                                        <img src="assets/img/red/img2.jpg" class="card-img" alt="">
                                         <!--end ts-gallery__item-description-->
                                     </div>
                                     <!--end ts-gallery__image-->
                                 </a>
                                 <!--end card ts-gallery__item-->
-                                <a href="assets/img/img-work-01.png" class="card ts-gallery__item popup-image" data-animate="ts-fadeInUp">
+                                <a href="assets/img/img3.jpg" class="card ts-gallery__item popup-image">
                                     <div class="ts-gallery__image">
-                                        <img src="assets/img/img-work-01.png" class="card-img" alt="">
+                                        <img src="assets/img/red/img3.jpg" class="card-img" alt="">
                                         <div class="ts-gallery__item-description">
                                             <h6 class="ts-opacity__50">Typography</h6>
                                             <h4>Kali</h4>
@@ -149,6 +149,39 @@
                                     </div>
                                     <!--end ts-gallery__image-->
                                 </a>
+                                <a href="assets/img/img4.jpg" class="card ts-gallery__item popup-image">
+                                    <div class="ts-gallery__image">
+                                        <img src="assets/img/red/img4.jpg" class="card-img" alt="">
+                                        <div class="ts-gallery__item-description">
+                                            <h6 class="ts-opacity__50">Typography</h6>
+                                            <h4>Kali</h4>
+                                        </div>
+                                        <!--end ts-gallery__item-description-->
+                                    </div>
+                                    <!--end ts-gallery__image-->
+                                </a>
+                                <a href="assets/img/red/img5.jpg" class="card ts-gallery__item popup-image">
+                                    <div class="ts-gallery__image">
+                                        <img src="assets/img/red/img5.jpg" class="card-img" alt="">
+                                        <div class="ts-gallery__item-description">
+                                            <h6 class="ts-opacity__50">Typography</h6>
+                                            <h4>Kali</h4>
+                                        </div>
+                                        <!--end ts-gallery__item-description-->
+                                    </div>
+                                    <!--end ts-gallery__image-->
+                                </a>
+                                <a href="assets/img/img6.jpg" class="card ts-gallery__item popup-image">
+                                    <div class="ts-gallery__image">
+                                        <img src="assets/img/red/img6.jpg" class="card-img" alt="">
+                                        <div class="ts-gallery__item-description">
+                                            <h6 class="ts-opacity__50">Typography</h6>
+                                            <h4>Kali</h4>
+                                        </div>
+                                        <!--end ts-gallery__item-description-->
+                                    </div>
+                                    <!--end ts-gallery__image-->
+                                </a>        
                                 <!--end card ts-gallery__item-->
                                 
                         </div>
@@ -156,6 +189,7 @@
                     </div>
                     <!--end container-->
                 </section>
+            </div>
                     <!--end portfolio-->
             <!--MY SERVICES ***********************************************************************************-->
             <section id="my-services" class="ts-block ts-xs-text-center pb-0">
@@ -348,13 +382,13 @@
             </section>
             <!--END MY SERVICES *************************************************************************************-->
 
-            <section id="my-skills" class="ts-block pb-5">
+            <section id="my-skills" class="ts-block pb-5" style="background-color: #272944">
                 <div class="container">
                     <div class="ts-title text-center">
                         <h1>Clientes</h1>
                     </div>
                     <!--end ts-title-->
-                    <img src="assets/img/clients.png">
+                    <img src="assets/img/clients.png" style="max-width: 100%">
                     <!--end row-->
                 </div>
                 <!--end container-->
@@ -368,7 +402,7 @@
         <!--************ FOOTER *************************************************************************************-->
         <!--*********************************************************************************************************-->
         <footer id="ts-footer" class="mt-5">
-            <section id="contact" class="ts-block ts-separate-bg-element" data-bg-image="assets/img/bg-man-wall.jpg" data-bg-image-opacity=".1">
+            <section id="contact" class="ts-block ts-separate-bg-element"  data-bg-image-opacity=".1">
                 <div class="container">
                     
                     <div class="pt-5">
