Remove arquivos desnecessarios e aplica mudanças

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="ThemeStarz">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="assets/font-awesome/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -64,10 +64,7 @@
                 </div>
                 <!--end row-->
                 <a href="#my-services" class="ts-btn-effect position-absolute ts-bottom__0 ts-left__0 ts-scroll ml-3 mb-3">
-                    <span class="ts-visible ts-circle__sm rounded-0 ts-bg-primary">
-                        <i class="fa fa-arrow-down text-white"></i>
-                    </span>
-                    <span class="ts-hidden ts-circle__sm rounded-0">
+                    <span class="ts-visible ts-circle__sm rounded-0">
                         <i class="fa fa-arrow-down text-white"></i>
                     </span>
                 </a>
@@ -471,7 +468,6 @@
                             <!--end ts-item-->
                         </div>
                         <!--end col-xl-4-->
-
                     </div>
                     <!--end row-->
                 </div>
@@ -479,10 +475,10 @@
             </section>
             <!--END MY SERVICES *************************************************************************************-->
 
-            <section id="my-skills" class="ts-block pb-5" style="background-color: #c9c9c9">
+            <section id="my-skills" class="ts-block pb-5" style="background-color: #ffffff">
                 <div class="container">
                     <div class="ts-title text-center">
-                        <h1 style="font-weight:bold">Clientes</h1>
+                        <h1 style="color:black;font-weight: bold">Clientes</h1>
                     </div>
                     <!--end ts-title-->
                     <img src="assets/img/clients.png" style="max-width: 100%">
